added the comments in the html and css

--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
         </nav>
     </header>
 
-
+<!--header backgorund image-->
  <div class="hero"></div>
 
+
+ <!--main content -->
     <main>
         <section class="content">
             <div class="search-engine-optimization" id="search-engine-optimization">
@@ -71,6 +73,8 @@
 
     </main>
 
+
+<!--aside section/ lead generation-->
     <aside>
         <article class="darby">
                 <h3>Lead Generation</h3>
@@ -99,6 +103,8 @@
         </article>
     </aside>
 
+
+<!--footer-->
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
